Fix background resizing
The background was getting squished up on mobile view. The changes in
style.css should help it be more responsive.

--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 /* overall */
 body {
     margin: 0;
-    background-color: #ca668099;
     background-image: url('./images/background.jpg');
-    background-position: center;
-    background-size: 100% 100%;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-color: #ca668099;
 }
 
 /* flex */
